--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".data.ui.main.MainActivity">
+        <activity android:name=".project.ui.main.MainActivity">
             <intent-filter>
                 <action
                     android:name="android.intent.action.MAIN"
